refactor(codegen): 更新时间字段范围查询支持
- 调整时间字段范围查询注释格式，增加空格分隔
- 将 Collectors.toList() 简化为 toList() 方法调用
- 优化字段处理流程，提升代码可读性